--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/tomisnhamilton/perfin-backend#readme",
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
+    "bson": "^6.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
